# ModaLink

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: test.yml
scripts/: __init__.py  export_to_neo4j.py  fetch_pr_comments.py  graph_visualizer.py  query_graph.py  visualize_graph.py
src/: __init__.py  chunking.py  document_processor.py  embeddings.py  graph_retriever.py  model_provider.py  neo4j_exporter.py
src/agents/: __init__.py  entity_extractor.py  extraction_graph.py  relation_extractor.py
src/models/: __init__.py  chunk.py  document.py  document_graph.py  entity.py  relation.py
tests/: README.md  __init__.py  conftest.py  helpers.py  test_extraction_integration.py
